--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">ABCDown_mobile</string>
+    <string name="app_name">ABCDown</string>
+    <string name="welcome">Bem vindo</string>
+    <string name="log_in_to_your_account">Entre na sua conta</string>
+    <string name="email_or_user">E-mail ou usuário</string>
+    <string name="password">Senha</string>
+    <string name="forget_password">Esqueceu a senha</string>
+    <string name="enter">Entrar</string>
+    <string name="continue_with_google">continue com o Google</string>
+    <string name="dont_have_an_account">Não tem uma conta?</string>
+    <string name="create_an_account">Criar uma conta</string>
 </resources>
