--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="password">Senha</string>
     <string name="forget_password">Esqueceu a senha?</string>
     <string name="enter">Entrar</string>
-    <string name="continue_with_google">continue com o Google</string>
+    <string name="continue_with_google">ou continue com o Google</string>
     <string name="dont_have_an_account">Não tem uma conta?</string>
     <string name="create_an_account">Criar uma conta</string>
 </resources>
