--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,12 +12,12 @@
     <string name="send">Enviar</string>
     <string name="confirm">Confirmar</string>
     <string name="cancel">Cancelar</string>
-    <string name="add">Adicionar</string>
+    <string name="register">Cadastrar</string>
     <string name="continue_with_google">ou continue com o Google</string>
     <string name="dont_have_an_account">Não tem uma conta?</string>
     <string name="create_an_account">Criar uma conta</string>
     <string name="forgot_my_password">Esqueci minha senha</string>
-    <string name="forgot_my_password_description">Por favor, insira a baixo o enderço de e-mail utilizado no cadastro</string>
+    <string name="forgot_my_password_description">Por favor, insira a baixo o endereço de e-mail utilizado no cadastro</string>
     <string name="check_your_email">Verifique seu e-mail</string>
     <string name="check_your_email_description">Confirme que essa conta é realmente sua inserindo o código que enviamos para</string>
     <string name="did_not_get_email">Nâo recebeu o e-mail?</string>
@@ -28,6 +28,10 @@
     <string name="type_your_new_password">Digite sua nova senha</string>
     <string name="confirm_password">Confirmar senha</string>
     <string name="confirm_your_new_password">Confirme sua nova senha</string>
+    <string name="confirm_your_password">Confirme sua senha</string>
+    <string name="confirm_your_email">Confirme seu e-mail</string>
+    <string name="email">E-mail</string>
+    <string name="type_your_email">Digite seu e-mail</string>
     <string name="cep">CEP</string>
     <string name="street">Logradouro</string>
     <string name="neighborhood">Bairro</string>
