--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="male">Masculino</string>
     <string name="feminine">Feminino</string>
     <string name="outhers">Outros</string>
+    <string name="phone">Telefone</string>
 
 
     // SCREEN FORGET PASSWORD
