--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,14 +76,32 @@
     <string name="set_student_password">Agora defina uma senha para que o aluno acesse sua conta a partir dela: </string>
     <string name="accompany">Acompanhar</string>
 
+
     // SCREEN HOME
+    <string name="hello">Olá</string>
+    <string name="home_select_option">Selecione a baixo a opção que deseja acessar</string>
+    <string name="about_abcdown">Sobre o ABCDown</string>
+    <string name="get_to_knw_abcdown">Conheça mais à respeito do nosso APP!</string>
+    <string name="share">Compartilhar</string>
+    <string name="share_with_friends">Gostou do ABCDown? Compartilhe com amigos!</string>
+    <string name="homework_description_button">Acompanhe tarefas de casa postadas pelos professores</string>
+    <string name="performance_description_button">Acompanhe o desempenho de seus estudantes</string>
 
     // SCREEN SETTINGS
-<!--    <string name="personal_data">Dados pessoais</string>-->
-<!--    <string name="personal_data">Dados pessoais</string>-->
-<!--    <string name="personal_data">Trocar senha</string>-->
-<!--    <string name="personal_data">Configurações</string>-->
+    <string name="personal_data">Dados pessoais</string>
+    <string name="change_password">Trocar senha</string>
+    <string name="out">Sair</string>
+    <string name="settings">Configurações</string>
+    <string name="homework">Tarefas de casa</string>
 
+    // SCREEN PERFORMANCE
+    <string name="performance">Desempenho</string>
+    <string name="performance_description">Aqui você pode acompanhar o desempenho do estudante nos Jogos e Tarefas de casa</string>
+    <string name="game">Jogos</string>
+    <string name="game_description">Veja pontuações, selos e erros do estudante nos jogos</string>
+    <string name="tasks">Tarefas</string>
+    <string name="tasks_description">Veja desempenho nas atividades postadas pelo professor</string>
 
+    // SCREEN EDIT DATA
     <string name="cancel">Cancelar</string>
 </resources>
